# lliurament3

./: pyproject.toml
lliurament_3/: churn_predict_app.py  run.bat
lliurament_3/models/: m_logistic.pck  m_svm.pck  m_tree.pck
lliurament_3/notebooks/: client_knn.ipynb  client_logistic.ipynb  client_svm.ipynb  client_tree.ipynb  dades.ipynb
